config: support given config file by args.